--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   }
