--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.11",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.8.2",
