Added lint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,6 @@
         "eslint:recommended",
         "plugin:react/recommended"
     ],
-    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 8,
         "ecmaFeatures": {
@@ -21,8 +20,7 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react",
-        "babel"
+        "react"
     ],
     "rules": {
         "accessor-pairs": "error",
@@ -43,7 +41,6 @@
                 "before": true
             }
         ],
-        "babel/semi": 1,
         "block-scoped-var": "error",
         "block-spacing": "error",
         "camelcase": "error",
