update package name and readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pacman-react",
-  "version": "0.0.2",
+  "name": "react-pacman",
+  "version": "0.0.1",
   "description": "Pacman game written as a React component",
   "main": "index.js",
   "scripts": {
